--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FundaArte</title>
     <link rel="shortcut icon" href="imagenes/logopagina1.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/estilosinicio.css">
+    <link rel="stylesheet" href="estilosinicio.css">
 </head>
 <body>
     <header class="titulo">
