--- a/inicio.html
+++ b/inicio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="titulo">
-        <img src="imagenes/tituloprincipalfa.png" alt="FundaArte" id="logotitulo">
+        <img src="tituloprincipalfa.png" alt="FundaArte" id="logotitulo">
     </header>
 
     <nav id="navegacion">
