--- a/imagenes.html
+++ b/imagenes.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FundaArte</title>
     <link rel="shortcut icon" href="imagenes/logopagina1.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/estilosimagenes.css">
+    <link rel="stylesheet" href="estilosimagenes.css">
 </head>
 <body>
     <header class="titulo">
-        <img src="../../imagenes/tituloprincipalfa.png" alt="FundaArte" id="logotitulo">
+        <img src="tituloprincipalfa.png" alt="FundaArte" id="logotitulo">
     </header>
 
     <nav id="navegacion">
@@ -29,55 +29,55 @@
         <div class="linea"></div>
         <div class="contenedor-imagenes">
             <div class="imagen">
-                <img src="../../imagenes/restrepo2019001.jpg" alt="">
+                <img src="restrepo2019001.jpg" alt="">
                 <div class="overlay">
                     <h2>Restrepo 2019 - Mayores</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="../../imagenes/anserma2019001.jpg" alt="">
+                <img src="anserma2019001.jpg" alt="">
                 <div class="overlay">
                     <h2>Anserma 2019 - Juvenil</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="../../imagenes/acacias2019001.jpg" alt="">
+                <img src="acacias2019001.jpg" alt="">
                 <div class="overlay">
                     <h2>Acacías 2019 - Mayores</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="../../imagenes/coyaima2019001.jpg" alt="">
+                <img src="coyaima2019001.jpg" alt="">
                 <div class="overlay">
                     <h2>Coyaima 2019 - Mayores</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="../../imagenes/quinchia2019001.jpg" alt="">
+                <img src="quinchia2019001.jpg" alt="">
                 <div class="overlay">
                     <h2>Quinchía 2019 - Juvenil</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="../../imagenes/festival2019001.jpg" alt="">
+                <img src="festival2019001.jpg" alt="">
                 <div class="overlay">
                     <h2>XII MUESTRA NACIONAL E INTERNACIONAL DE DANZA FOLCLÓRICA</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="../../imagenes/ecuador2018001.jpg" alt="">
+                <img src="ecuador2018001.jpg" alt="">
                 <div class="overlay">
                     <h2>Ecuador 2018 - Mayores</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="../../imagenes/restrepo2018001.jpg" alt="">
+                <img src="imagenes/restrepo2018001.jpg" alt="">
                 <div class="overlay">
                     <h2>Restrepo 2018 - Mayores</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="../../imagenes/giranacional2018001.jpg" alt="">
+                <img src="imagenes/giranacional2018001.jpg" alt="">
                 <div class="overlay">
                     <h2>Gira Nacional 2018 - Mayores</h2>
                 </div>
