--- a/imagenes.html
+++ b/imagenes.html
@@ -14,7 +14,7 @@
 
     <nav id="navegacion">
         <ul>
-            <li><a href="../../inicio.html">Inicio</a></li>
+            <li><a href="inicio.html">Inicio</a></li>
             <li><a href="imagenes.html">Imágenes</a></li>
             <li><a href="../../subpaginas/videos/videos.html">Videos</a></li>
             <li><a href="../../subpaginas/nn/nn.html">vacío</a></li>
