--- a/inicio.html
+++ b/inicio.html
@@ -15,7 +15,7 @@
     <nav id="navegacion">
         <ul>
             <li><a href="inicio.html">Inicio</a></li>
-            <li><a href="subpaginas/imagenes/imagenes.html">Imágenes</a></li>
+            <li><a href="imagenes.html">Imágenes</a></li>
             <li><a href="subpaginas/videos/videos.html">Videos</a></li>
             <li><a href="subpaginas/nn/nn.html">vacío</a></li>
             <li><a href="subpaginas/contactanos/contactanos.html">Contáctanos</a></li>
