--- a/imagenes.html
+++ b/imagenes.html
@@ -71,13 +71,13 @@
                 </div>
             </div>
             <div class="imagen">
-                <img src="imagenes/restrepo2018001.jpg" alt="">
+                <img src="restrepo2018001.jpg" alt="">
                 <div class="overlay">
                     <h2>Restrepo 2018 - Mayores</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="imagenes/giranacional2018001.jpg" alt="">
+                <img src="giranacional2018001.jpg" alt="">
                 <div class="overlay">
                     <h2>Gira Nacional 2018 - Mayores</h2>
                 </div>
